[package]
name = "i-opener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = { version = "0.6.1", default-features = false, features = ["ron", "ron_conf"] }
i3ipc = "0.10.1"
ron = "0.8.1"
serde = { version = "1.0.199", features = ["derive"] }
